refactor(location): 중간지점 추천 MapGlot 전환